# dj-email-url

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  dj_email_url.py  justfile  pyproject.toml  setup.cfg  setup.py  test_dj_email_url.py  tox.ini
.github/workflows/: main.yml  reuse.yml
.reuse/: dep5
src/: dj_email_url.py
tests/: test_dj_email_url.py
